New variable 'git_home' for base dir
Sometimes git repos are supposed to end up in a separate volume
than /home, so use 'git_home' to allow customizing the location.
Default value is /home/git to avoid changing behavior unless
explicitly setting git_home.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,3 +7,5 @@ git_server_repos: []
 # lookup path for key files
 git_server_lookup_keys: "{{inventory_dir}}/files/public-keys"
 
+# base directory for git area
+git_home: "/home/git"
